[package]
name = "scow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"]}
bytes = "1.3"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
